Change coc-explorer config

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -116,12 +116,12 @@
 		"gh": "collapseRecursive",
 		"u": ["wait", "expandable?", "expand", "open"],
 		"<cr>": ["wait", "expandable?", "cd", "open"],
-		"l": ["open"],
+		"l": ["expand"],
 		"L": "open:vsplit",
 		"o": ["wait", "expanded?", "collapse", "expand"],
 		"O": "open:tab",
-		"H": "collapse",
-		"h": "gotoParent",
+		"H": "gotoParent",
+		"h": "collapse",
 		"yp": "copyFilepath",
 		"yn": "copyFilename",
 		"yy": "copyFile",
